--- a/app/src/main/res/layouts/habit/layout/habit_type_choose.xml
+++ b/app/src/main/res/layouts/habit/layout/habit_type_choose.xml
@@ -25,7 +25,8 @@
             android:layout_width="wrap_content"
 
             android:background="@drawable/app_back_button"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -60,7 +61,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:src="@drawable/habit_physique_icon"
-            android:background="@null" />
+            android:background="?attr/selectableItemBackground" />
 
         <TextView
             android:layout_width="match_parent"
@@ -97,7 +98,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:src="@drawable/habit_mind_icon"
-            android:background="@null" />
+            android:background="?attr/selectableItemBackground" />
 
         <TextView
             android:layout_width="match_parent"
