--- a/app/src/main/res/layouts/stampcard/layout/stamp_card_template.xml
+++ b/app/src/main/res/layouts/stampcard/layout/stamp_card_template.xml
@@ -22,6 +22,7 @@
             android:textSize="@dimen/textview_big_0_size" />
 
         <ImageView
+            android:id="@+id/stampcard_partner_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/onboarding_dog"
@@ -53,10 +54,12 @@
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"/>
 
-            <ImageButton
+            <ImageView
                 android:id="@+id/stampcard_habit_icon"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:maxWidth="40dp"
+                android:maxHeight="40dp"
 
                 android:src="@null"
                 android:scaleType="fitXY"
