--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
 
     <color name="item_habit_starting_blue">#F4FEFF</color>
     <color name="item_habit_ending_blue">#AFFAFF</color>
+    <color name="pethouse_blue">#D3F5F9</color>
 
     <color name="stampcard_button">#E4FDFF</color>
     <color name="stampcard_button_outline">#80D1FF</color>
