--- a/app/src/main/res/layouts/main/layout/main_fragment_stats.xml
+++ b/app/src/main/res/layouts/main/layout/main_fragment_stats.xml
@@ -230,55 +230,63 @@
 
     </LinearLayout>
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginVertical="50dp"
-        android:background="@drawable/item_stats"
-        >
+    <TableLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center">
 
-        <TextView
-            android:id="@+id/stats_progress_bar_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="Placeholder" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
 
-        <ProgressBar
-            android:id="@+id/stats_progress_bar"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            app:layout_constraintLeft_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:indeterminate="false"
-            android:progressDrawable="@drawable/stats_progress_bar"
-            android:background="@drawable/stats_progress_bar_shape"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:max="100"
-            android:progress="65" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:background="@drawable/item_stats"
+                android:text=" M " />
 
-        <TextView
-            android:id="@+id/stats_progress_bar_completion_percentage"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:gravity="center"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="placeholder"
-            android:textSize="@dimen/textview_small_size" />
+            <TextView android:text=" T "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="2"
+                android:background="@drawable/item_stats"
+                />
 
-        <TextView
-            android:id="@+id/stats_progress_bar_completion_percentage_2"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:text="placeholder"
-            android:textSize="@dimen/textview_small_size" />
+            <TextView android:text=" W "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="3"
+                android:background="@drawable/item_stats"/>
 
-    </android.support.constraint.ConstraintLayout>
+
+            <TextView android:text=" R "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="4"
+                android:background="@drawable/item_stats"/>
+
+            <TextView android:text=" F "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="5"
+                android:background="@drawable/item_stats"/>
+
+            <TextView android:text=" S "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="6"
+                android:background="@drawable/item_stats"/>
+
+            <TextView android:text=" U "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="7"
+                android:background="@drawable/item_stats" />
+
+        </TableRow>
+
+    </TableLayout>
 
 </LinearLayout>
