Added onboarding instruciton linkage to home screen and added pethouse stores/rewards

--- a/app/src/main/res/layouts/onboarding/layout/ob_instruction_4.xml
+++ b/app/src/main/res/layouts/onboarding/layout/ob_instruction_4.xml
@@ -9,7 +9,7 @@
         android:id="@+id/image_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="30dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp">
 
@@ -50,5 +50,14 @@
 
         android:text="- Shannon A. Alder"
         android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/onboarding_instruction_finish"
+        android:layout_below="@id/onboarding_instruction_4_2"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/onboarding_instruction_finish"
+        />
 
 </RelativeLayout>
